test-package-compiler/src/snapshots/test_package_compiler__generated_tests__erlang_nested.snap
---
source: test-package-compiler/src/generated_tests.rs
expression: "./cases/erlang_nested"
---
//// /out/lib/the_package/_gleam_artefacts/one@two.abstr
<556 byte binary>

//// /out/lib/the_package/_gleam_artefacts/one@two.cache
<.cache binary>

//// /out/lib/the_package/_gleam_artefacts/one@two.cache_meta
<31 byte binary>

//// /out/lib/the_package/ebin/importy.app
{application, importy, [
    {vsn, "0.1.0"},
    {applications, []},
    {description, ""},
    {modules, [one@two]},
    {registered, []}
]}.


//// /out/lib/the_package/ebin/one@two.beam
<0 byte binary>
