test-package-compiler/src/snapshots/test_package_compiler__generated_tests__erlang_nested_qualified_constant.snap
---
source: test-package-compiler/src/generated_tests.rs
expression: "./cases/erlang_nested_qualified_constant"
---
//// /out/lib/the_package/_gleam_artefacts/one@two.abstr
<349 byte binary>

//// /out/lib/the_package/_gleam_artefacts/one@two.cache
<.cache binary>

//// /out/lib/the_package/_gleam_artefacts/one@two.cache_meta
<31 byte binary>

//// /out/lib/the_package/_gleam_artefacts/two.abstr
<285 byte binary>

//// /out/lib/the_package/_gleam_artefacts/two.cache
<.cache binary>

//// /out/lib/the_package/_gleam_artefacts/two.cache_meta
<62 byte binary>

//// /out/lib/the_package/ebin/importy.app
{application, importy, [
    {vsn, "0.1.0"},
    {applications, []},
    {description, ""},
    {modules, [one@two,
               two]},
    {registered, []}
]}.


//// /out/lib/the_package/ebin/one@two.beam
<0 byte binary>

//// /out/lib/the_package/ebin/two.beam
<0 byte binary>
