test-package-compiler/src/snapshots/test_package_compiler__generated_tests__hello_joe.snap
---
source: test-package-compiler/src/generated_tests.rs
expression: "./cases/hello_joe"
---
//// /out/lib/the_package/_gleam_artefacts/hello_joe.abstr
<568 byte binary>

//// /out/lib/the_package/_gleam_artefacts/hello_joe.cache
<.cache binary>

//// /out/lib/the_package/_gleam_artefacts/hello_joe.cache_meta
<31 byte binary>

//// /out/lib/the_package/ebin/hello_joe.app
{application, hello_joe, [
    {vsn, "0.1.0"},
    {applications, []},
    {description, ""},
    {modules, [hello_joe]},
    {registered, []}
]}.


//// /out/lib/the_package/ebin/hello_joe.beam
<0 byte binary>
