test-package-compiler/src/snapshots/test_package_compiler__generated_tests__imported_record_constructors.snap
---
source: test-package-compiler/src/generated_tests.rs
expression: "./cases/imported_record_constructors"
---
//// /out/lib/the_package/_gleam_artefacts/one@one.abstr
<595 byte binary>

//// /out/lib/the_package/_gleam_artefacts/one@one.cache
<.cache binary>

//// /out/lib/the_package/_gleam_artefacts/one@one.cache_meta
<39 byte binary>

//// /out/lib/the_package/_gleam_artefacts/one@two.abstr
<595 byte binary>

//// /out/lib/the_package/_gleam_artefacts/one@two.cache
<.cache binary>

//// /out/lib/the_package/_gleam_artefacts/one@two.cache_meta
<39 byte binary>

//// /out/lib/the_package/_gleam_artefacts/two.abstr
<7530 byte binary>

//// /out/lib/the_package/_gleam_artefacts/two.cache
<.cache binary>

//// /out/lib/the_package/_gleam_artefacts/two.cache_meta
<254 byte binary>

//// /out/lib/the_package/ebin/importy.app
{application, importy, [
    {vsn, "0.1.0"},
    {applications, []},
    {description, ""},
    {modules, [one@one,
               one@two,
               two]},
    {registered, []}
]}.


//// /out/lib/the_package/ebin/one@one.beam
<0 byte binary>

//// /out/lib/the_package/ebin/one@two.beam
<0 byte binary>

//// /out/lib/the_package/ebin/two.beam
<0 byte binary>

//// /out/lib/the_package/include/one@one_User.hrl
-record(user, {
    name :: binary(),
    score :: integer()
}).


//// /out/lib/the_package/include/one@two_User.hrl
-record(user, {
    name :: binary(),
    score :: integer()
}).
