test-package-compiler/src/snapshots/test_package_compiler__generated_tests__javascript_empty.snap
---
source: test-package-compiler/src/generated_tests.rs
expression: "./cases/javascript_empty"
---
//// /out/lib/the_package/_gleam_artefacts/empty.cache
<.cache binary>

//// /out/lib/the_package/_gleam_artefacts/empty.cache_meta
<29 byte binary>

//// /out/lib/the_package/empty.mjs
export {}


//// /out/lib/the_package/gleam.mjs
export * from "../prelude.mjs";


//// Warning
warning: Empty module

Module 'empty' contains no public definitions.

Hint: You can safely remove this module.
