test-package-compiler/src/snapshots/test_package_compiler__generated_tests__javascript_sourcemaps.snap
---
source: test-package-compiler/src/generated_tests.rs
expression: "./cases/javascript_sourcemaps"
---
//// /out/lib/the_package/_gleam_artefacts/hello.cache
<.cache binary>

//// /out/lib/the_package/_gleam_artefacts/hello.cache_meta
<44 byte binary>

//// /out/lib/the_package/gleam.mjs
export * from "../prelude.mjs";


//// /out/lib/the_package/hello.gleam
// SPDX-License-Identifier: Apache-2.0
// SPDX-FileCopyrightText: 2022 The Gleam contributors

pub type Wibble {
  Woo
}

pub fn wobble() -> Wibble {
  Woo
}


//// /out/lib/the_package/hello.mjs
//# sourceMappingURL=hello.mjs.map
import { CustomType as $CustomType } from "./gleam.mjs";

export class Woo extends $CustomType {}
export const Wibble$Woo$const = new Woo();
export const Wibble$Woo = () => Wibble$Woo$const;
export const Wibble$isWoo = (value) => value instanceof Woo;

export function wobble() {
  return Wibble$Woo$const;
}


//// /out/lib/the_package/hello.mjs.map
{"version":3,"file":"hello.mjs","sources":["hello.gleam"],"names":[],"mappings":";;;AAGA,AACE;AAAA;;AAAA,4DACD;;AAED;EACE;CACD"}
