test-package-compiler/src/snapshots/test_package_compiler__generated_tests__not_overwriting_erlang_module.snap
---
source: test-package-compiler/src/generated_tests.rs
expression: "./cases/not_overwriting_erlang_module"
---
//// /out/lib/the_package/_gleam_artefacts/app@code.abstr
<300 byte binary>

//// /out/lib/the_package/_gleam_artefacts/app@code.cache
<.cache binary>

//// /out/lib/the_package/_gleam_artefacts/app@code.cache_meta
<42 byte binary>

//// /out/lib/the_package/ebin/app@code.beam
<0 byte binary>

//// /out/lib/the_package/ebin/importy.app
{application, importy, [
    {vsn, "0.1.0"},
    {applications, []},
    {description, ""},
    {modules, [app@code]},
    {registered, []}
]}.


//// Warning
warning: Empty module

Module 'app/code' contains no public definitions.

Hint: You can safely remove this module.
