test-package-compiler/src/snapshots/test_package_compiler__generated_tests__overwriting_erlang_module.snap
---
source: test-package-compiler/src/generated_tests.rs
assertion_line: 273
expression: "./cases/overwriting_erlang_module"
---
error: Erlang module name collision

The module `src/code.gleam` compiles to an Erlang module named `code`.

By default Erlang includes a module with the same name so if we were to
compile and load your module it would overwrite the Erlang one, potentially
causing confusing errors and crashes.

Hint: Rename this module and try again.
